Placed image in background for desktop view

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <h1 class="landing__header">
             Serdecznie zapraszamy do Chatki AKT na Pietraszonce w Istebnej.
         </h1>
-        <h2 class="landing__header">
+        <!-- <h2 class="landing__header">
             Serdecznie zapraszamy do Chatki AKT na Pietraszonce w Istebnej.
         </h2>
         <h3 class="landing__header">
             Serdecznie zapraszamy do Chatki AKT na Pietraszonce w Istebnej.
-        </h3>
+        </h3> -->
     </header>
     <main class="main">
         <aside class="intro__content">
@@ -28,82 +28,69 @@
             <p>W ciągu roku ruszamy z obsługą w każdy piątek wieczorem i działamy aż do niedzielnego popołudnia. W czasie ferii (ferie studenckie + ferie szkolne w woj. śląskim) i wakacji (lipiec, sierpień, wrzesień) przyjmujemy gości przez cały tydzień.</p>
             <p>!!!Uwaga!!! Wszystkie terminy kiedy chatka jest czynna możesz potwierdzić zaglądając do naszego terminarza. Chatka jest zamknięta kiedy nie ma informacji o obsłudze lub kiedy jest informacja, że w dane dni jest ona właśnie zamknięta.</p>
         </aside>
-        <!-- <div> -->
-            <section class="buttons__section">
-                <div class="col">
-                    <button class="custom__button">
-                        <i class="fas fa-home"></i>
-
-                        O Chatce
-                    </button>
-                </div>
-                <div class="col">
-                    <button class="custom__button">
-                        <i class="fas fa-mug-hot"></i>
-
-                        Co zapewniamy
-                    </button>
-                </div>
-                <div class="col">
-                    <button class="custom__button">
-                        <i class="fas fa-bed"></i>
-
-                        Rezerwacje
-                    </button>
-                </div>
-                <div class="col">
-                    <button class="custom__button">
-                        <i class="fas fa-coins"></i>
-
-                        Cennik
-                    </button>
-                </div>
-                <div class="col">
-                    <button class="custom__button">
-                        <i class="far fa-calendar-check"></i>
-
-                        Teminarz chatkowy
-                    </button>
-                </div>
-                <div class="col">
-                    <button class="custom__button">
-                        <i class="fas fa-subway"></i>
-
-                        Dojazd
-                    </button>
-                </div>
-                <div class="col">
-                    <button class="custom__button">
-                        <i class="fas fa-mountain"></i>
-
-                        W okolicy
-                    </button>
-                </div>
-                <div class="col">
-                    <button class="custom__button">
-                        <i class="fas fa-book"></i>
-
-                        Regulamin
-                    </button>
-                </div>
-                <div class="col">
-                    <button class="custom__button">
-                        <i class="fas fa-grin-hearts"></i>
-
-                        Wspieraj Chatkę
-                    </button>
-                </div>
-                <div class="col">
-                    <button class="custom__button">
-                        <i class="fas fa-phone"></i>
-
-                        Kontakt
-                    </button>
-                </div>
-
-            </section>
-        <!-- </div> -->
+        <section class="buttons__section">
+            <div class="col">
+                <button class="custom__button">
+                    <i class="fas fa-home"></i>
+                    O Chatce
+                </button>
+            </div>
+            <div class="col">
+                <button class="custom__button">
+                    <i class="fas fa-mug-hot"></i>
+                    Co zapewniamy
+                </button>
+            </div>
+            <div class="col">
+                <button class="custom__button">
+                    <i class="fas fa-bed"></i>
+                    Rezerwacje
+                </button>
+            </div>
+            <div class="col">
+                <button class="custom__button">
+                    <i class="fas fa-coins"></i>
+                    Cennik
+                </button>
+            </div>
+            <div class="col">
+                <button class="custom__button">
+                    <i class="far fa-calendar-check"></i>
+                    Teminarz chatkowy
+                </button>
+            </div>
+            <div class="col">
+                <button class="custom__button">
+                    <i class="fas fa-subway"></i>
+                    Dojazd
+                </button>
+            </div>
+            <div class="col">
+                <button class="custom__button">
+                    <i class="fas fa-mountain"></i>
+                    W okolicy
+                </button>
+            </div>
+            <div class="col">
+                <button class="custom__button">
+                    <i class="fas fa-book"></i>
+                    Regulamin
+                </button>
+            </div>
+            <div class="col">
+                <button class="custom__button">
+                    <i class="fas fa-grin-hearts"></i>
+                    Wspieraj Chatkę
+                </button>
+            </div>
+            <div class="col">
+                <button class="custom__button">
+                    <i class="fas fa-phone"></i>
+                    Kontakt
+                </button>
+            </div>
+        </section>
     </main>
-    <img class="body__backgroud" src="chatka_male-626x278.png" alt="">
+    <!-- <img class="body__backgroud" src="chatka_male-626x278.png" alt=""> -->
 </body>
 </html>
