changed backgroud transparency

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <p>!!!Uwaga!!! Wszystkie terminy kiedy chatka jest czynna możesz potwierdzić zaglądając do naszego terminarza. Chatka jest zamknięta kiedy nie ma informacji o obsłudze lub kiedy jest informacja, że w dane dni jest ona właśnie zamknięta.</p>
         </aside>
         <section class="buttons__section">
+            <!-- <h1 class="landing__header">
+                Serdecznie zapraszamy do Chatki AKT na Pietraszonce w Istebnej.
+            </h1> -->
             <div class="col">
                 <button class="custom__button">
                     <i class="fas fa-home"></i>
@@ -91,6 +94,5 @@
             </div>
         </section>
     </main>
-    <!-- <img class="body__backgroud" src="chatka_male-626x278.png" alt=""> -->
 </body>
 </html>
